crates/meilisearch/tests/settings/snapshots/vectors.rs/bad_parameters/userProvided-dimensions-task_result.snap
---
source: crates/meilisearch/tests/settings/vectors.rs
---
{
  "uid": "[uid]",
  "batchUid": "[batchUid]",
  "indexUid": "test",
  "status": "succeeded",
  "type": "settingsUpdate",
  "canceledBy": null,
  "details": {
    "embedders": {
      "test": {
        "source": "userProvided",
        "dimensions": 768
      }
    }
  },
  "error": null,
  "duration": "[duration]",
  "enqueuedAt": "[enqueuedAt]",
  "startedAt": "[startedAt]",
  "finishedAt": "[finishedAt]"
}
